<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="Home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/exit"
        android:title="Exit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_exit"/>

</menu>