<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="selectedPokemon"
            type="com.yigitkula.pokemonlistapp.model.Pokemon" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.DetailFragment"
            android:orientation="vertical"
            android:id="@+id/detailFragmentLayout">


            <ImageView
                android:id="@+id/pokemonImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="top"
                android:layout_marginStart="89dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="85dp"
                android:background="@drawable/img_border"
                android:downloadUrl="@{selectedPokemon.pokemonImg}"
                android:src="@mipmap/ic_launcher_round"></ImageView>

            <TextView
                android:id="@+id/txt1"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="64dp"
                android:text="Name:"
                android:textColor="@color/orange"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/txt2"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_below="@+id/txt1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="-1dp"
                android:text="Weight:"
                android:textColor="@color/orange"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pokeWeight"
                android:layout_width="237dp"
                android:layout_height="45dp"
                android:layout_alignTop="@+id/txt2"
                android:layout_alignBottom="@+id/txt2"
                android:layout_toEndOf="@+id/txt2"
                android:text="@{selectedPokemon.pokemonWeight}"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/txt3"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_below="@+id/txt2"
                android:layout_alignParentStart="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="1dp"
                android:text="Height:"
                android:textColor="@color/orange"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>


            <TextView
                android:id="@+id/pokeHeight"
                android:layout_width="237dp"
                android:layout_height="45dp"
                android:layout_alignTop="@+id/txt3"
                android:layout_alignBottom="@+id/txt3"
                android:layout_toEndOf="@+id/txt3"
                android:text="@{selectedPokemon.pokemonHeight}"
                android:textSize="25sp"
                android:textStyle="bold"
                ></TextView>

            <TextView
                android:id="@+id/pokeName"
                android:layout_width="237dp"
                android:layout_height="45dp"
                android:layout_alignTop="@+id/txt1"
                android:layout_alignBottom="@+id/txt1"
                android:layout_toEndOf="@+id/txt1"
                android:text="@{selectedPokemon.pokemonName}"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="71dp"
                android:layout_marginBottom="118dp"
                android:background="@drawable/list_item_bg"
                android:text="Show Pokemon In Overlay"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="71dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/list_item_bg"
                android:text="Back to Pokemon List"
                android:textColor="@color/white" />

        </RelativeLayout>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_menu"
            android:layout_gravity="bottom">
        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

